k8s/prod/stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
  name: qdrant-prod
  namespace: prod-ns
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: OrderedReady
  serviceName: qdrant-headless-prod
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: qdrant-prod
  template:
    metadata:
      annotations:
      labels:
        app: qdrant-prod
    spec:
      containers:
        - name: qdrant
          image: crpi-hytqalx0cm8oqxr4.cn-hangzhou.personal.cr.aliyuncs.com/mxrag-dev/qdrant:v1.14.1-cjk-language-support
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6333
              name: http
              protocol: TCP
            - containerPort: 6334
              name: grpc
              protocol: TCP
            - containerPort: 6335
              name: p2p
              protocol: TCP
          command:
            - /bin/sh
            - '-c'
            - |
              cd /qdrant
              # 设置第一个peer的URI，其他peer使用bootstrap
              if [ "$POD_NAME" = "qdrant-prod-0" ]; then
                echo "Starting first peer with URI"
                exec ./qdrant --uri "http://$POD_NAME.qdrant-headless-prod.$POD_NAMESPACE.svc.cluster.local:6335"
              else
                echo "Starting peer with bootstrap to qdrant-prod-0"
                exec ./qdrant --bootstrap "http://qdrant-prod-0.qdrant-headless-prod.$POD_NAMESPACE.svc.cluster.local:6335" --uri "http://$POD_NAME.qdrant-headless-prod.$POD_NAMESPACE.svc.cluster.local:6335"
              fi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
            - mountPath: /qdrant/storage
              name: storage
          resources:
            limits:
              cpu: '2'
              memory: 4Gi
            requests:
              cpu: '1'
              memory: 2Gi
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: qdrant-registry-secret-prod
      nodeSelector:
        type: virtual-kubelet
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 120
      tolerations:
        - effect: NoSchedule
          key: virtual-kubelet.io/provider
          operator: Exists
      volumes:
        - emptyDir: {}
          name: storage
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: storage
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 20Gi
        storageClassName: alicloud-disk-ssd
        volumeMode: Filesystem
