k8s/prod/headless-service.yml
apiVersion: v1
kind: Service
metadata:
  name: qdrant-headless-prod
  namespace: prod-ns
spec:
  clusterIP: None
  ports:
    - port: 6333
      targetPort: 6333
      protocol: TCP
      name: http
    - port: 6334
      targetPort: 6334
      protocol: TCP
      name: grpc
    - port: 6335
      targetPort: 6335
      protocol: TCP
      name: p2p
  selector:
    app: qdrant-prod
