k8s/prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: grpc
    alb.ingress.kubernetes.io/healthcheck-port: '6334'
    alb.ingress.kubernetes.io/healthcheck-protocol: TCP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
  labels:
    ingress-controller: alb
  name: qdrant-ingress-prod
  namespace: prod-ns
spec:
  ingressClassName: alb
  rules:
    - host: qdrant.atominnolab.com
      http:
        paths:
          - backend:
              service:
                name: qdrant-headless-prod
                port:
                  number: 6334
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - qdrant.atominnolab.com
      secretName: tls-atominnolab.com
